# CameBoy

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeOptions.cmake  CONTRIBUTING.md  LICENSE  README.md  package-lock.cmake
.github/workflows/: build.yml  cameboy.yml  camecore.yml  camecore_tests.yml  standalone.yml  tests.yml
CameBoy/: CMakeLists.txt  emulator.c  emulator.h  main.c  sdl_window.c  sdl_window.h
cmake/: tools.cmake
include/CameCore/: CameCore.h
include/camecore/: camecore.h  ccapi.h  utils.h
src/: CMakeLists.txt  bus.c  cart.c  core.c  cpu.c  cpu_fetch.c  cpu_instr.c  cpu_proc.c  cpu_util.c  dissassemble.c  emu.c  instr.c  io.c  main.c  ram.c  stack.c  utils.c
standalone/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  test_gbce.c
